overflow fixed

--- a/scss/_structure.scss
+++ b/scss/_structure.scss
@@ -72,7 +72,7 @@ footer {
 
 .primary-darkp{
     @extend .primary-dark;
-    font-weight: bold;
+    font-weight: $boldtitle;
     text-decoration: none;
     &:hover{
         color:#0C120C;
